--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 			-->
 
 				<div>
-					<p>Doggo ipsum long bois lotsa pats blep. What a nice floof ruff super chub very good spot, the neighborhood pupper lotsa pats. Borkdrive shibe shoober what a nice floof, borking doggo.</p>
-					<p>Shoober shooberino adorable doggo many pats, heckin good boys many pats pupper wrinkler, corgo maximum borkdrive. A frighten puggo wow very biscit.</p>
-					<p>Big ol h*ck adorable doggo vvv smol borking doggo with a long snoot for pats big ol, he made many woofs doing me a frighten puggo wow very biscit, ruff fat boi ruff long doggo. </p>
-					<p>Long bois mlem I am bekom fat wrinkler puggo maximum borkdrive big ol pupper I am bekom fat, fluffer vvv adorable doggo lotsa pats snoot. I am bekom fat ur givin me a spook length boy wow very biscit very good spot.</p>
-					<p>Doggo ipsum long bois lotsa pats blep. What a nice floof ruff super chub very good spot, the neighborhood pupper lotsa pats. Borkdrive shibe shoober what a nice floof, borking doggo.</p>
+					<p>1) Speed Networking: You get to meet 6 other mentors and speak to them for 10 minutes, after the event you are asked to rank them in an order where the first is who you want as your mentor.</p>
+					<p>2) Mentor assignment: You are put with a mentor, likely you're first choice but sometimes it is not possible, and you get to message each other until the first meeting.</p>
+					<p>3) First Meeting: You get to know one and another and what sort of things you want out of the programme and set out some goals for you to accomplish</p>
+					<p>4) Next couple of Meetings: You work on different tasks that include CV, LinkdIn, Networking, Soft skills.</p>
+					<p>5) End of phase 1: This ends the first part of the first 6 months and this website makes one of the points.</p>
 				</div>
 			</div>
 
